flexbox align fix

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -9,6 +9,13 @@
   box-shadow: 0px 0px 50px 2px rgba(0, 0, 0, 0.25);
 }
 
+.coll-item-image {
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+  z-index: 10;
+}
+
 .coll-item-content {
   height: 100%;
   display: flex;
