--- a/src/pages/collection.styles.scss
+++ b/src/pages/collection.styles.scss
@@ -1,6 +1,6 @@
 .coll-page-items {
   flex-wrap: wrap;
-  gap: 2.2vw;
+  gap: 2.5vw;
   padding: 0 2vw;
 }
 
